Update Maven plugins and use <enablePreview> 🥳